Atualizações nos métodos